--- a/forecast/hourly/on-118_metric_e.html
+++ b/forecast/hourly/on-118_metric_e.html
@@ -210,8 +210,8 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       <tr>
         <td headers="header1" class="text-center">18:00</td>
         <td headers="header2" class="text-center">20</td>
-        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/06.png" alt="Chance of showers" /></span><div class="media-body">
-            <p>Chance of showers</p>
+        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/19.png" alt="Chance of showers" /></span><div class="media-body">
+            <p>Chance of showers. Risk of severe thunderstorms</p>
           </div>
         </td>
         <td headers="header4" class="text-center">Low</td>
@@ -222,8 +222,8 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       <tr>
         <td headers="header1" class="text-center">19:00</td>
         <td headers="header2" class="text-center">18</td>
-        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/06.png" alt="Chance of showers" /></span><div class="media-body">
-            <p>Chance of showers</p>
+        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/19.png" alt="Chance of showers, Risk of severe thunderstorms" /></span><div class="media-body">
+            <p>Chance of showers. Risk of severe thunderstorms</p>
           </div>
         </td>
         <td headers="header4" class="text-center">Low</td>
