--- a/radar/index_thunder_e.html
+++ b/radar/index_thunder_e.html
@@ -219,8 +219,8 @@
 	<div class="row">
 		<ol class="breadcrumb">
 <li><a href="http://www.canada.ca/en/index.html">Home</a></li><li><a href="http://www.canada.ca/en/services/environment/index.html">Environment and natural resources</a></li>
-<li><a href="/index_e.html">Weather information</a></li>
-<li><a href="/mainmenu/weather_menu_e.html">Weather</a></li>
+<li><a href="https://gc-proto.github.io/weather/index_e.html">Weather information</a></li>
+<li><a href="https://gc-proto.github.io/weather/mainmenu/weather_menu_e.html">Weather</a></li>
 		</ol>
 	</div>
 </div>
@@ -724,7 +724,7 @@
 		<h3 class="wxo-footer-nav">Weather Alerts</h3>
       <ul class="mrgn-bttm-lg lst-spcd">
             <li><a href="/warnings/index_e.html">Public Alerts - Canada</a></li>
-            <li><a href="/lightning/index_e.html">Lightning</a></li>
+            <li><a href="https://gc-proto.github.io/weather/lightning/index_e.html">Lightning</a></li>
             <li><a href="/hurricane/index_e.html">Hurricane</a></li>
             <li><a href="/warnings/weathersummaries_e.html">Weather Summaries</a></li>
 				<li><a href="http://www.ec.gc.ca/meteo-weather/default.asp?lang=En&amp;n=15E59C08-1">Hazardous Weather</a></li>
