--- a/jet_stream/index_e.html
+++ b/jet_stream/index_e.html
@@ -169,7 +169,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 
 
 
-<section class="hidden-print"  id="weather-topics">
+</details></div>	<section class="hidden-print"  id="weather-topics">
 	<h2 class="wb-inv">What we are doing</h2>
 	 <div class="row wb-eqht">
       <section class="col-lg-4 col-md-6">
