--- a/warnings/ottawa-report_e.html
+++ b/warnings/ottawa-report_e.html
@@ -113,7 +113,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 	<div class="container">
 	<div class="row">
 		<ol class="breadcrumb">
-		<li><a href="http://www.canada.ca/en/index.html">Home</a></li><li><a href="http://www.canada.ca/en/services/environment/index.html">Environment and natural resources</a></li><li><a href="/index_e.html">Weather information</a></li>
+		<li><a href="https://gc-proto.github.io/weather/en.html">Home</a></li><li><a href="http://www.canada.ca/en/services/environment/index.html">Environment and natural resources</a></li><li><a href="https://gc-proto.github.io/weather/index_e.html">Weather information</a></li>
 <li><a href="/mainmenu/weather_menu_e.html">Alerts</a></li>
 <li><a href="/canada_e.html">Warnings, Watches and Statements</a></li>
 <li><a href="/forecast/canada/index_e.html?id=on" title="Ontario">Ontario - south</a></li>
@@ -173,7 +173,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 			<h3 class="wxo-footer-nav">Weather Forecasts</h3>
       	<ul class="mrgn-bttm-lg lst-spcd">
             <li><a href="/canada_e.html">Canadian Weather</a></li>
-            <li><a href="/radar/index_e.html">Radar - Canada</a></li>
+            <li><a href="https://gc-proto.github.io/weather/radar/index_thunder_e.html">Radar - Canada</a></li>
             <li><a href="/satellite/index_e.html">Satellite - Canada</a></li>
             <li><a href="/marine/index_e.html">Marine - Canada</a></li>
             <li><a href="/mainmenu/airquality_menu_e.html">Air Quality</a></li>
@@ -186,7 +186,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 		<h3 class="wxo-footer-nav">Weather Alerts</h3>
       <ul class="mrgn-bttm-lg lst-spcd">
             <li><a href="/warnings/index_e.html">Public Alerts - Canada</a></li>
-            <li><a href="/lightning/index_e.html">Lightning</a></li>
+            <li><a href="https://gc-proto.github.io/weather/lightning/index_e.html">Lightning</a></li>
             <li><a href="/hurricane/index_e.html">Hurricane</a></li>
             <li><a href="/warnings/weathersummaries_e.html">Weather Summaries</a></li>
 				<li><a href="http://www.ec.gc.ca/meteo-weather/default.asp?lang=En&amp;n=15E59C08-1">Hazardous Weather</a></li>
