--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Weather home</a></li>
 <li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Canadian weather</a></li> <!--(province?)-->
 <li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Jet stream</a></li>
-<li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Alerts</a></li>
+<li><a href="https://gc-proto.github.io/weather/mainmenu/alert_menu_e.html">Alerts</a></li>
 <li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Public weather alerts for Canada</a></li>
   
 <li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Canadian weather radar</a></li>  
