--- a/warnings/index_e.html
+++ b/warnings/index_e.html
@@ -33,6 +33,10 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <noscript><iframe title="Google Tag Manager" src="//www.googletagmanager.com/ns.html?id=GTM-TLGQ9K" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], j=d.createElement(s),dl=l!='dataLayer1'?'&l='+l:'';j.async=true;j.src='//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);})(window,document,'script','dataLayer1','GTM-TLGQ9K');</script>
 <!-- End Google Tag Manager -->
+<link rel="stylesheet" href="/weather/cacheable/css/city/jquery-ui-1.10.3.custom.min.css" />
+<link rel="stylesheet" href="/weather/template/wxo/css/wxo.css" />
+ 
+<link rel="stylesheet" type="text/css" href="/weather/warnings/css/warnings.css" />
 
 
 <ul id="wb-tphp">
@@ -1296,6 +1300,8 @@ coords="148,157,158,164,156,177,159,184,145,199,142,208,150,218,143,232,147,238,
 </div>
 </div>
 </footer>
+	
+	
 <!--[if gte IE 9 | !IE ]><!-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
 <script src="/weather/wet-boew/js/wet-boew.min.js"></script>
