--- a/warnings/index_e.html
+++ b/warnings/index_e.html
@@ -509,7 +509,7 @@ coords="148,157,158,164,156,177,159,184,145,199,142,208,150,218,143,232,147,238,
 </td>
 <td>
 <ul class="margin-bottom-small margin-top-small list-unstyled">
-<li><a href="/web/20170822171711/http://weather.gc.ca/warnings/report_e.html?on10#1302080981841108232201708220503ww1171cwto">Tornado</a></li>
+<li><a href="/web/20170822171711/http://weather.gc.ca/warnings/report_e.html?on10#1302080981841108232201708220503ww1171cwto">Severe thunderstorm</a></li>
 </ul>
 </td>
 <td>
@@ -522,7 +522,7 @@ coords="148,157,158,164,156,177,159,184,145,199,142,208,150,218,143,232,147,238,
 </td>
 <td>
 <ul class="margin-bottom-small margin-top-small list-unstyled">
-<li><a href="/web/20170822171711/http://weather.gc.ca/warnings/report_e.html?on41#1302080981841108232201708220503ww1171cwto">Tornado</a></li>
+<li><a href="/web/20170822171711/http://weather.gc.ca/warnings/report_e.html?on41#1302080981841108232201708220503ww1171cwto">Severe thunderstorm</a></li>
 </ul>
 </td>
 <td>
@@ -535,7 +535,7 @@ coords="148,157,158,164,156,177,159,184,145,199,142,208,150,218,143,232,147,238,
 </td>
 <td>
 <ul class="margin-bottom-small margin-top-small list-unstyled">
-<li><a href="/web/20170822171711/http://weather.gc.ca/warnings/report_e.html?on6#1302080981841108232201708220503ww1171cwto">Tornado</a></li>
+<li><a href="/web/20170822171711/http://weather.gc.ca/warnings/report_e.html?on6#1302080981841108232201708220503ww1171cwto">Severe thunderstorm</a></li>
 </ul>
 </td>
 <td>
@@ -561,7 +561,7 @@ coords="148,157,158,164,156,177,159,184,145,199,142,208,150,218,143,232,147,238,
 </td>
 <td>
 <ul class="margin-bottom-small margin-top-small list-unstyled">
-<li><a href="/web/20170822171711/http://weather.gc.ca/warnings/report_e.html?on48#1302080981841108232201708220503ww1171cwto">Tornado</a></li>
+<li><a href="/web/20170822171711/http://weather.gc.ca/warnings/report_e.html?on48#1302080981841108232201708220503ww1171cwto">Severe thunderstorm</a></li>
 </ul>
 </td>
 <td>
@@ -574,7 +574,7 @@ coords="148,157,158,164,156,177,159,184,145,199,142,208,150,218,143,232,147,238,
 </td>
 <td>
 <ul class="margin-bottom-small margin-top-small list-unstyled">
-<li><a href="/web/20170822171711/http://weather.gc.ca/warnings/report_e.html?on13#1302080981841108232201708220503ww1171cwto">Tornado</a></li>
+<li><a href="/web/20170822171711/http://weather.gc.ca/warnings/report_e.html?on13#1302080981841108232201708220503ww1171cwto">Severe thunderstorm</a></li>
 </ul>
 </td>
 <td>
@@ -587,7 +587,7 @@ coords="148,157,158,164,156,177,159,184,145,199,142,208,150,218,143,232,147,238,
 </td>
 <td>
 <ul class="margin-bottom-small margin-top-small list-unstyled">
-<li><a href="/web/20170822171711/http://weather.gc.ca/warnings/report_e.html?on43#1302080981841108232201708220503ww1171cwto">Tornado</a></li>
+<li><a href="/web/20170822171711/http://weather.gc.ca/warnings/report_e.html?on43#1302080981841108232201708220503ww1171cwto">Severe thunderstorm</a></li>
 </ul>
 </td>
 <td>
@@ -653,7 +653,7 @@ coords="148,157,158,164,156,177,159,184,145,199,142,208,150,218,143,232,147,238,
 </td>
 <td>
 <ul class="margin-bottom-small margin-top-small list-unstyled">
-<li><a href="/web/20170822171711/http://weather.gc.ca/warnings/report_e.html?qc68#1302080981841108232201708220503ww1171cwto">Tornado</a></li>
+<li><a href="/web/20170822171711/http://weather.gc.ca/warnings/report_e.html?qc68#1302080981841108232201708220503ww1171cwto">Severe thunderstorm</a></li>
 </ul>
 </td>
 <td>
@@ -994,7 +994,7 @@ coords="148,157,158,164,156,177,159,184,145,199,142,208,150,218,143,232,147,238,
 <td><a href="/web/20170822171711/http://weather.gc.ca/warnings/report_e.html?on10">Brockville - Leeds and Grenville</a>
 <details><summary></summary>
 <ul class="margin-bottom-small margin-top-small </li></ul>list-unstyled">
-<li><a href="/web/20170822171711/http://weather.gc.ca/warnings/report_e.html?on10#1302080981841108232201708220503ww1171cwto">Tornado watch</a></li>
+<li><a href="/web/20170822171711/http://weather.gc.ca/warnings/report_e.html?on10#1302080981841108232201708220503ww1171cwto">Severe thunderstorm watch</a></li>
 </ul>
 </details></td>
 </tr>
@@ -1002,7 +1002,7 @@ coords="148,157,158,164,156,177,159,184,145,199,142,208,150,218,143,232,147,238,
 <td><a href="/weather/warnings/ottawa-report_e.html">City of Ottawa</a>
 <details><summary></summary>
 <ul class="margin-bottom-small margin-top-small </li></ul>list-unstyled">
-<li><a href="/web/20170822171711/http://weather.gc.ca/warnings/report_e.html?on41#1302080981841108232201708220503ww1171cwto">Tornado watch</a></li>
+<li><a href="/web/20170822171711/http://weather.gc.ca/warnings/report_e.html?on41#1302080981841108232201708220503ww1171cwto">Severe thunderstorm watch</a></li>
 </ul>
 </details></td>
 </tr>
@@ -1010,7 +1010,7 @@ coords="148,157,158,164,156,177,159,184,145,199,142,208,150,218,143,232,147,238,
 <td><a href="/web/20170822171711/http://weather.gc.ca/warnings/report_e.html?on6">Cornwall - Morrisburg</a>
 <details><summary></summary>
 <ul class="margin-bottom-small margin-top-small </li></ul>list-unstyled">
-<li><a href="/web/20170822171711/http://weather.gc.ca/warnings/report_e.html?on6#1302080981841108232201708220503ww1171cwto">Tornado watch</a></li>
+<li><a href="/web/20170822171711/http://weather.gc.ca/warnings/report_e.html?on6#1302080981841108232201708220503ww1171cwto">Severe thunderstorm watch</a></li>
 </ul>
 </details></td>
 </tr>
@@ -1026,7 +1026,7 @@ coords="148,157,158,164,156,177,159,184,145,199,142,208,150,218,143,232,147,238,
 <td><a href="/web/20170822171711/http://weather.gc.ca/warnings/report_e.html?on48">Prescott and Russell</a>
 <details><summary></summary>
 <ul class="margin-bottom-small margin-top-small </li></ul>list-unstyled">
-<li><a href="/web/20170822171711/http://weather.gc.ca/warnings/report_e.html?on48#1302080981841108232201708220503ww1171cwto">Tornado watch</a></li>
+<li><a href="/web/20170822171711/http://weather.gc.ca/warnings/report_e.html?on48#1302080981841108232201708220503ww1171cwto">Severe thunderstorm watch</a></li>
 </ul>
 </details></td>
 </tr>
@@ -1034,7 +1034,7 @@ coords="148,157,158,164,156,177,159,184,145,199,142,208,150,218,143,232,147,238,
 <td><a href="/web/20170822171711/http://weather.gc.ca/warnings/report_e.html?on13">Renfrew - Pembroke - Barry's Bay</a>
 <details><summary></summary>
 <ul class="margin-bottom-small margin-top-small </li></ul>list-unstyled">
-<li><a href="/web/20170822171711/http://weather.gc.ca/warnings/report_e.html?on13#1302080981841108232201708220503ww1171cwto">Tornado watch</a></li>
+<li><a href="/web/20170822171711/http://weather.gc.ca/warnings/report_e.html?on13#1302080981841108232201708220503ww1171cwto">Severe thunderstorm watch</a></li>
 </ul>
 </details></td>
 </tr>
@@ -1042,7 +1042,7 @@ coords="148,157,158,164,156,177,159,184,145,199,142,208,150,218,143,232,147,238,
 <td><a href="/web/20170822171711/http://weather.gc.ca/warnings/report_e.html?on43">Smiths Falls - Lanark - Sharbot Lake</a>
 <details><summary></summary>
 <ul class="margin-bottom-small margin-top-small </li></ul>list-unstyled">
-<li><a href="/web/20170822171711/http://weather.gc.ca/warnings/report_e.html?on43#1302080981841108232201708220503ww1171cwto">Tornado watch</a></li>
+<li><a href="/web/20170822171711/http://weather.gc.ca/warnings/report_e.html?on43#1302080981841108232201708220503ww1171cwto">Severe thunderstorm watch</a></li>
 </ul>
 </details></td>
 </tr>
@@ -1086,7 +1086,7 @@ coords="148,157,158,164,156,177,159,184,145,199,142,208,150,218,143,232,147,238,
 <td><a href="/web/20170822171711/http://weather.gc.ca/warnings/report_e.html?qc68">Gatineau</a>
 <details><summary></summary>
 <ul class="margin-bottom-small margin-top-small </li></ul>list-unstyled">
-<li><a href="/web/20170822171711/http://weather.gc.ca/warnings/report_e.html?qc68#1302080981841108232201708220503ww1171cwto">Tornado watch</a></li>
+<li><a href="/web/20170822171711/http://weather.gc.ca/warnings/report_e.html?qc68#1302080981841108232201708220503ww1171cwto">Severe thunderstorm watch</a></li>
 </ul>
 </details></td>
 </tr>
