--- a/city/pages/on-118_metric_e.html
+++ b/city/pages/on-118_metric_e.html
@@ -154,7 +154,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
     <section>
       <details class="panel panel-default hidden-xs" open="open">
         <summary class="panel-heading">
-          <h2>Current Conditions<span class="small visible-print-inline-block pull-right">Observed at: Ottawa Macdonald-Cartier Int'l Airport   12:00 PM EDT Sunday 25 June 2017</span></h2>
+          <h2>Current Conditions<span class="small visible-print-inline-block pull-right">Observed at: Ottawa Macdonald-Cartier Int'l Airport   12:00 PM EDT Thursday 24 August 2017</span></h2>
         </summary>
         <ul class="hidden-print hidden-xs pull-right list-inline mrgn-rght-sm mrgn-bttm-0 wxo-moveup">
           <li>
@@ -443,7 +443,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         <table class="table table-condensed mrgn-bttm-0 wxo-iconfore">
           <tr>
             <th scope="col">
-              <a href="http://weather.gc.ca/forecast/hourly/on-118_metric_e.html">
+              <a href="/weather/forecast/hourly/on-118_metric_e.html">
                 <strong title="Sunday">Sun</strong>
                 <br>25 <abbr title="June">Jun</abbr>
               </a>
@@ -556,7 +556,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
               <p class="mrgn-bttm-0 pop text-center" title="Chance of Precipitation">
                 <small> </small>
               </p>
-              <p class="mrgn-bttm-0">A few showers or thunderstorms</p>
+              <p class="mrgn-bttm-0">A few showers or severe thunderstorms</p>
             </td>
             <td><img width="60" height="51" src="/weather/weathericons/36.gif" alt="Chance of showers" class="center-block" title="Chance of showers"><p class="mrgn-bttm-0"><span class="low wxo-metric-hide" title="min">11&deg;<abbr title="Celsius">C</abbr>
                 </span><span class="low wxo-imperial-hide wxo-city-hidden" title="min">52&deg;<abbr title="Fahrenheit">F</abbr>
