--- a/warnings/ottawa-report_e.html
+++ b/warnings/ottawa-report_e.html
@@ -114,7 +114,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 	<div class="row">
 		<ol class="breadcrumb">
 		<li><a href="https://gc-proto.github.io/weather/en.html">Home</a></li><li><a href="http://www.canada.ca/en/services/environment/index.html">Environment and natural resources</a></li><li><a href="https://gc-proto.github.io/weather/index_e.html">Weather information</a></li>
-<li><a href="/mainmenu/weather_menu_e.html">Alerts</a></li>
+<li><a href="https://gc-proto.github.io/weather//mainmenu/alert_menu_e.html">Alerts</a></li>
 <li><a href="/canada_e.html">Warnings, Watches and Statements</a></li>
 <li><a href="/forecast/canada/index_e.html?id=on" title="Ontario">Ontario - south</a></li>
 		</ol>
