--- a/services/environment/weather.html
+++ b/services/environment/weather.html
@@ -165,11 +165,11 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
   <div class="well"> 
    <h2 class="mrgn-tp-0">Most requested</h2> 
    <ul class="lst-spcd"> 
-    <li><a href="http://weather.gc.ca/mainmenu/weather_menu_e.html">Current and forecast weather for my community</a></li> 
+    <li><a href="https://gc-proto.github.io/weather/mainmenu/weather_menu_e.html">Current and forecast weather for my community</a></li> 
     <li><a href="http://climate.weather.gc.ca/">Past weather conditions</a></li> 
-    <li><a href="http://weather.gc.ca/mainmenu/alert_menu_e.html">Weather watches and warnings for my community</a></li> 
+    <li><a href="https://gc-proto.github.io/weather/mainmenu/alert_menu_e.html">Weather watches and warnings for my community</a></li> 
     <li><a href="http://tides.gc.ca/eng">Tides, Currents, and Water Levels</a></li> 
-    <li><a href="http://weather.gc.ca/radar/index_e.html">Radar for my region</a></li> 
+    <li><a href="https://gc-proto.github.io/weather/radar/index_thunder_e.html">Radar for my region</a></li> 
     <li><a href="http://weather.gc.ca/mainmenu/marine_menu_e.html">Marine weather and warnings</a></li> 
     <li><a href="http://avalanche.pc.gc.ca/index-eng.aspx?d=TODAY">Public avalanche information</a></li> 
    </ul> 
