--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <li><a href="https://gc-proto.github.io/weather/lightning/ONT-index_e.html">Ontario lightning map - Thunderstorm</a></li>
 <li><a href="https://gc-proto.github.io/weather/warnings/ottawa-report_e.html">Ottawa alert - Thunderstorm</a></li>
 </ul>
-  
+  <!-- Skipping for now...
 <h3>Snowfall scenario</h3>
 <ul>
 <li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Canada.ca home</a></li>
@@ -159,7 +159,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 
 
 <li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Weather home</a></li>
-<li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Canadian weather</a></li> <!--(province?)-->
+<li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Canadian weather</a></li> 
 <li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Jet stream</a></li>
 <li><a href="https://gc-proto.github.io/weather/mainmenu/alert_menu_e.html">Alerts</a></li>
 <li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Public weather alerts for Canada</a></li>
@@ -180,7 +180,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Severe weather</a></li>
 
 <li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Weather home</a></li>
-<li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Canadian weather</a></li> <!--(province?)-->
+<li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Canadian weather</a></li> 
 <li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Jet stream</a></li>
 <li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Alerts</a></li>
 <li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Public weather alerts for Canada</a></li>
@@ -193,7 +193,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <li><a href="https://gc-proto.github.io/weather/warnings/ottawa-report_3_e.html">Ottawa alert - Smoke</a></li>
 <li><a href="https://gc-proto.github.io/weather/airquality/pages/onaq-008_e.html">Ottawa air quality health index - Smoke</a></li>
 </ul>
-   
+   -->
   
 </section>
 <div class="row pagedetails">
