--- a/city/pages/on-118_metric_e.html
+++ b/city/pages/on-118_metric_e.html
@@ -1,6 +1,3 @@
----
-redirect_from: "/city/jump_e.html?city=Ottawa+%28Kanata+-+Orl%C3%A9ans%29%2C+ON&lang=e&unit="
----
 <!DOCTYPE html><!--[if lt IE 9]><html class="no-js lt-ie9" lang="en" dir="ltr"><![endif]--><!--[if gt IE 8]><!-->
 <html class="no-js" lang="en" dir="ltr">
 <!--<![endif]-->
@@ -116,10 +113,10 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 	<div class="container">
 	<div class="row">
 		<ol class="breadcrumb">
-		<li><a href="http://www.canada.ca/en/index.html">Home</a></li><li><a href="http://www.canada.ca/en/services/environment/index.html">Environment and natural resources</a></li><li><a href="/index_e.html">Weather information</a></li>
-<li><a href="/mainmenu/weather_menu_e.html">Weather</a></li>
-<li><a href="https://gc-proto.github.io/weather/canada_e.html">Local forecasts</a></li>
-<li><a href="/forecast/canada/index_e.html?id=on" title="Ontario">Ontario</a></li>
+		<li><a href="/weather/en.html">Home</a></li><li><a href="/weather/services/environment.html">Environment and natural resources</a></li><li><a href="/weather/index_e.html">Weather information</a></li>
+<li><a href="/weather/mainmenu/weather_menu_e.html">Weather</a></li>
+<li><a href="/weather/canada_e.html">Local forecasts</a></li>
+<li><a href="/weather/forecast/canada/ON_index_e.html" title="Ontario">Ontario</a></li>
 		</ol>
 	</div>
 </div>
@@ -200,7 +197,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
               <dt>Observed at:</dt>
               <dd class="mrgn-bttm-0">Ottawa Macdonald-Cartier Int'l Airport</dd>
               <dt>Date: </dt>
-              <dd class="mrgn-bttm-0">10:00 AM EDT Friday 21 July 2017</dd>
+              <dd class="mrgn-bttm-0">10:00 AM EDT Thursday 24 August 2017</dd>
             </dl>
             <div class="row no-gutters wb-eqht brdr-tp">
               <div class="col-sm-4 brdr-rght-city">
@@ -423,7 +420,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
     <section class="hidden-xs mrgn-tp-lg">
       <details class="panel panel-default wxo-fcst" open="open">
         <summary class="panel-heading">
-          <h2>Forecast<span class="small visible-print-inline-block pull-right">Issued: 11:00 AM EDT Sunday 25 June 2017</span></h2>
+          <h2>Forecast<span class="small visible-print-inline-block pull-right">Issued: 11:00 AM EDT Thursday 24 August 2017</span></h2>
         </summary>
         <ul class="hidden-print pull-right list-inline mrgn-rght-sm mrgn-bttm-0 wxo-moveup">
           <li class="brdr-rght">
