--- a/index.html
+++ b/index.html
@@ -114,37 +114,35 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 </header>
 <main role="main" property="mainContentOfPage" class="container">
 <h1 property="name" id="wb-cont">Weather - UI index</h1>
-
+<p>Copy of weather interfaces for testing and prototyping.</p>
 <section>
-<p>List the associated pages here for easy reference </p>
 
-<h3>Navigation</h3>
-<ul>
-<li><a href="https://gc-proto.github.io/weather/index_e.html">Weather topic page</a></li>
-</ul>
-
-<h3>Severe thunderstorm scenario</h3>
+<h2>Canada.ca pages</h2>
 <ul>
 <li><a href="https://gc-proto.github.io/weather/en.html">Canada.ca home</a></li>
 <li><a href="https://gc-proto.github.io/weather/services/environment.html">Environment theme</a></li>
 <li><a href="https://gc-proto.github.io/weather/services/environment/weather.html">Weather topic</a></li>
 <li><a href="https://gc-proto.github.io/weather/services/environment/weather/yourweather.html">Get your weather</a></li>
-<li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Weather radar and satellite</a></li>
-<li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Severe weather</a></li>
+</ul>
 
-
-<li><a href="https://gc-proto.github.io/weather/index_e.html">Weather home</a></li>
+<h2>Weather.gc.ca pages</h2>
+<ul>
+<li><a href="https://gc-proto.github.io/weather/index_e.html">Weather home (Weather Information)</a></li>
 <li><a href="https://gc-proto.github.io/weather/canada_e.html">Canadian weather</a></li> <!--(province?)-->
-<li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Jet stream</a></li>
-<li><a href="https://gc-proto.github.io/weather//mainmenu/alert_menu_e.html">Alerts</a></li>
-<li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Public weather alerts for Canada</a></li>
-  
-<li><a href="https://gc-proto.github.io/weather/radar/index_thunder_e.html">Canadian weather radar</a></li>  
- 
-<li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Ottawa - Thunderstorm</a></li>
+<li><a href="https://gc-proto.github.io/weather/mainmenu/alert_menu_e.html">Alerts index</a></li>
+ </ul>
+ <h3>Condition specific</h2>
+ <ul>
+
+ <li><a href="https://gc-proto.github.io/weather/warnings/index_e.html">Canadian alerts - Thunderstorm + Smoke</a></li> 
+<li><a href="https://gc-proto.github.io/weather/radar/index_thunder_e.html">Canadian weather radar - Thunderstorm</a></li>  
 <li><a href="https://gc-proto.github.io/weather/radar/xft-index_thunder_e.html">Franktown radar - Thunderstorm</a></li>
 <li><a href="https://gc-proto.github.io/weather/lightning/index_e.html">Canada lightning map - Thunderstorm</a></li>
 <li><a href="https://gc-proto.github.io/weather/lightning/ONT-index_e.html">Ontario lightning map - Thunderstorm</a></li>
+ </ul>
+ <h3>City pages</h3>
+ <ul>
+<li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">City page - Ottawa - Thunderstorm</a></li>
 <li><a href="https://gc-proto.github.io/weather/warnings/ottawa-report_e.html">Ottawa alert - Thunderstorm</a></li>
 </ul>
   <!-- Skipping for now...
