--- a/airquality/pages/onaq-008_e.html
+++ b/airquality/pages/onaq-008_e.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
 wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-<title>Ottawa (Kanata - Orléans), ON - 7 Day Forecast - Environment Canada</title>
+<title>Ottawa, Ontario - Air Quality Health Index (AQHI) - Environment Canada</title>
 <meta content="width=device-width,initial-scale=1" name="viewport">
 <!-- Meta data -->
 <meta name="description" content="Web Experience Toolkit (WET) includes reusable components for building and maintaining innovative Web sites that are accessible, usable, and interoperable. These reusable components are open source software and free for use by departments and external Web communities">
@@ -13,6 +13,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <!--[if gte IE 9 | !IE ]><!-->
 <link href="/weather/GCWeb/assets/favicon.ico" rel="icon" type="image/x-icon">
 <link rel="stylesheet" href="/weather/template/GCWeb/css/theme.min.css">
+<link rel="stylesheet" href="/weather/airquality/css/airquality.css">
 <!--<![endif]-->
 <!--[if lt IE 9]>
 <link href="/weather/GCWeb/assets/favicon.ico" rel="shortcut icon" />
