--- a/mainmenu/alert_menu_e.html
+++ b/mainmenu/alert_menu_e.html
@@ -238,7 +238,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 			<h3 class="wxo-footer-nav">Weather Forecasts</h3>
       	<ul class="mrgn-bttm-lg lst-spcd">
             <li><a href="/weather/canada_e.html">Canadian Weather</a></li>
-            <li><a href="https://gc-proto.github.io/weather/radar/index_thunder_e.html>Radar - Canada</a></li>
+            <li><a href="https://gc-proto.github.io/weather/radar/index_thunder_e.html">Radar - Canada</a></li>
             <li><a href="/satellite/index_e.html">Satellite - Canada</a></li>
             <li><a href="/marine/index_e.html">Marine - Canada</a></li>
             <li><a href="/weather/mainmenu/airquality_menu_e.html">Air Quality</a></li>
