--- a/lightning/ONT-index_e.html
+++ b/lightning/ONT-index_e.html
@@ -142,8 +142,8 @@
 		<div class="container">
 	<div class="row">
 		<ol class="breadcrumb">
-<li><a href="http://www.canada.ca/en/index.html">Home</a></li><li><a href="http://www.canada.ca/en/services/environment/index.html">Environment and natural resources</a></li>
-<li><a href="/index_e.html">Weather information</a></li>
+<li><a href="http://www.canada.ca/en/index.html">Home</a></li><li><a href="https://gc-proto.github.io/weather/services/environment.html">Environment and natural resources</a></li>
+<li><a href="https://gc-proto.github.io/weather/index_e.html">Weather information</a></li>
 <li><a href="https://gc-proto.github.io/weather/warnings/ottawa-report_e.html">Alerts</a></li>
 		</ol>
 	</div>
@@ -259,7 +259,7 @@
 	<ul class="lst-spcd">
 		<li><a href="/canada_e.html">Canadian Weather</a></li>
 		<li><a href="/warnings/index_e.html">Public Alerts - Canada</a></li>
-		<li><a href="/radar/index_e.html">Radar - Canada</a></li>
+		<li><a href="https://gc-proto.github.io/weather/radar/index_thunder_e.html">Radar - Canada</a></li>
 		<li><a href="/satellite/index_e.html">Satellite - Canada</a></li>
 		<li><a href="/saisons/index_e.html">Seasonal forecasts</a></li>
 		<li><a href="/mainmenu/airquality_menu_e.html">Air Quality </a></li>
