--- a/lightning/ONT-index_e.html
+++ b/lightning/ONT-index_e.html
@@ -142,7 +142,7 @@
 		<div class="container">
 	<div class="row">
 		<ol class="breadcrumb">
-<li><a href="http://www.canada.ca/en/index.html">Home</a></li><li><a href="https://gc-proto.github.io/weather/services/environment.html">Environment and natural resources</a></li>
+<li><a href="https://gc-proto.github.io/weather/en.html">Home</a></li><li><a href="https://gc-proto.github.io/weather/services/environment.html">Environment and natural resources</a></li>
 <li><a href="https://gc-proto.github.io/weather/index_e.html">Weather information</a></li>
 <li><a href="https://gc-proto.github.io/weather/warnings/ottawa-report_e.html">Alerts</a></li>
 		</ol>
