--- a/radar/xft-index_thunder_e.html
+++ b/radar/xft-index_thunder_e.html
@@ -148,10 +148,10 @@
 		<div class="container">
 	<div class="row">
 		<ol class="breadcrumb">
-<li><a href="http://www.canada.ca/en/index.html">Home</a></li><li><a href="http://www.canada.ca/en/services/environment/index.html">Environment and natural resources</a></li>
-<li><a href="/index_e.html">Weather information</a></li>
-<li><a href="/mainmenu/weather_menu_e.html">Weather</a></li>
-<li><a href="/radar/index_e.html">Radar</a></li>
+<li><a href="https://gc-proto.github.io/weather/en.html">Home</a></li><li><a href="https://gc-proto.github.io/weather/services/environment.html">Environment and natural resources</a></li>
+<li><a href="https://gc-proto.github.io/weather/index_e.html">Weather information</a></li>
+<li><a href="https://gc-proto.github.io/weather/mainmenu/weather_menu_e.html">Weather</a></li>
+<li><a href="https://gc-proto.github.io/weather/radar/index_thunder_e.html">Radar</a></li>
 		</ol>
 	</div>
 </div>
