--- a/mainmenu/weather_menu_e.html
+++ b/mainmenu/weather_menu_e.html
@@ -182,9 +182,9 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 		<section class="col-lg-4 col-md-6 sect">
 			<h2 class="header">Radar</h2>		
 				<ul class="unol">
-					<li><a href="/radar/index_e.html">Canada</a></li>
+					<li><a href="https://gc-proto.github.io/weather/radar/index_thunder_e.html">Canada</a></li>
 					<li><a href="/radar/index_e.html?id=ERN">Atlantic</a></li>
-					<li><a href="/radar/index_e.html?id=ONT">Ontario</a></li>
+					<li><a href="https://gc-proto.github.io/weather/radar/xft-index_thunder_e.html">Ontario</a></li>
 					<li><a href="/radar/index_e.html?id=PAC">Pacific</a></li>
 					<li><a href="/radar/index_e.html?id=WRN">Prairies</a></li>
 					<li><a href="/radar/index_e.html?id=QUE">Quebec</a></li>
