--- a/index_e.html
+++ b/index_e.html
@@ -119,7 +119,7 @@ h2, .h1 {
 		<div class="container">
 	<div class="row">
 		<ol class="breadcrumb">
-<li><a href="/weather/canada_en.html">Home</a></li><li><a href="/weather/services/environment.html">Environment and natural resources</a></li>
+<li><a href="https://gc-proto.github.io/weather/en.html">Home</a></li><li><a href="/weather/services/environment.html">Environment and natural resources</a></li>
 		</ol>
 	</div>
 </div>
