--- a/index.html
+++ b/index.html
@@ -144,6 +144,8 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
  <ul>
 <li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">City page - Ottawa - Thunderstorm</a></li>
 <li><a href="https://gc-proto.github.io/weather/warnings/ottawa-report_e.html">Ottawa alert - Thunderstorm</a></li>
+<li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_2_e">Ottawa - Snowfall</a></li>
+<li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_3_e">Ottawa - Smoke</a></li>
 </ul>
   <!-- Skipping for now...
 <h3>Snowfall scenario</h3>
