--- a/city/pages/on-118_metric_2_e.html
+++ b/city/pages/on-118_metric_2_e.html
@@ -115,7 +115,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 		<ol class="breadcrumb">
 		<li><a href="https://gc-proto.github.io/weather/en.html">Home</a></li><li><a href="https://gc-proto.github.io/weather/services/environment.html">Environment and natural resources</a></li><li><a href="https://gc-proto.github.io/weather/index_e.html">Weather information</a></li>
 <li><a href="https://gc-proto.github.io/weather/mainmenu/weather_menu_e.html">Weather</a></li>
-<li><a href="/canada_e.html">Local forecasts</a></li>
+<li><a href="https://gc-proto.github.io/weather/canada_e.html">Local forecasts</a></li>
 <li><a href="/forecast/canada/index_e.html?id=on" title="Ontario">Ontario</a></li>
 		</ol>
 	</div>
