--- a/index.html
+++ b/index.html
@@ -142,10 +142,10 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
  </ul>
  <h3>City pages</h3>
  <ul>
-<li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">City page - Ottawa - Thunderstorm</a></li>
+<li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e.html">City page - Ottawa - Thunderstorm</a></li>
 <li><a href="https://gc-proto.github.io/weather/warnings/ottawa-report_e.html">Ottawa alert - Thunderstorm</a></li>
-<li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_2_e">Ottawa - Snowfall</a></li>
-<li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_3_e">Ottawa - Smoke</a></li>
+<li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_2_e.html">Ottawa - Snowfall</a></li>
+<li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_3_e.html">Ottawa - Smoke</a></li>
 </ul>
   <!-- Skipping for now...
 <h3>Snowfall scenario</h3>
