--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_2_e.html">Ottawa - Snowfall</a></li>
 <li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_3_e.html">Ottawa - Smoke</a></li>
 </ul>
-  <!-- Skipping for now...
+  <!-- Skipping for now....
 <h3>Snowfall scenario</h3>
 <ul>
 <li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Canada.ca home</a></li>
