--- a/city/pages/on-118_metric_e.html
+++ b/city/pages/on-118_metric_e.html
@@ -159,13 +159,13 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
             <a class="wxo-imperial-hide wxo-city-hidden" href="/past_conditions/index_e.html?station=yow&amp;unit=imperial">Past 24 hours</a>
           </li>
           <li class="brdr-lft">
-            <a href="/radar/index_e.html?id=xft">Radar</a>
+            <a href="https://gc-proto.github.io/weather/radar/xft-index_thunder_e.html">Radar</a>
           </li>
           <li class="brdr-lft">
             <a href="/satellite/index_e.html#goes_east">Satellite</a>
           </li>
           <li class="brdr-lft">
-            <a href="/lightning/index_e.html">Lightning</a>
+            <a href="/weather/lightning/index_e.html">Lightning</a>
           </li>
         </ul>
         <div class="row no-gutters wb-eqht hidden-print">
