--- a/city/pages/on-118_metric_e.html
+++ b/city/pages/on-118_metric_e.html
@@ -431,7 +431,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
             </abbr>
           </li>
           <li class="brdr-rght">
-            <a href="/warnings/index_e.html">Alerts</a>
+            <a href="https://gc-proto.github.io/weather/warnings/index_e.html">Alerts</a>
           </li>
           <li>
             <a href="/jet_stream/index_e.html">Jet Stream</a>
