--- a/tpltest.html
+++ b/tpltest.html
@@ -77,32 +77,34 @@
 </section>
 
 
-			<div id="def-preFooter">
-				<!-- Write closure fall-back static file -->
-				<!-- /ROOT/etc/designs/canada/cdts/gcweb/v4_0_25/cdts/static/preFooter-en.html -->
-			</div>
-			<!-- Write closure template -->
-			<script type="text/javascript">
-				var defPreFooter = document.getElementById("def-preFooter");
-				defPreFooter.outerHTML = wet.builder.preFooter({
-					dateModified: "2017-08-29"
-				});
-			</script>
-		</main>
-		<div id="def-footer">
-			<!-- Write closure fall-back static file -->
-			<!-- /ROOT/etc/designs/canada/cdts/gcweb/v4_0_25/cdts/static/footer-en.html -->
-		</div>
-		<!-- Write closure template -->
-		<script type="text/javascript">
-			var defFooter = document.getElementById("def-footer");
-			defFooter.outerHTML = wet.builder.footer({
-			});
-		</script>
-		<!-- Write closure template -->
-		<script type="text/javascript">
-			document.write(wet.builder.refFooter({
-			}));
-		</script>
-	</body>
+<div id="def-preFooter">
+	<!-- Write closure fall-back static file -->
+	<!-- /ROOT/etc/designs/canada/cdts/gcweb/v4_0_25/cdts/static/preFooter-en.html -->
+</div>
+<!-- Write closure template -->
+<script type="text/javascript">
+	var defPreFooter = document.getElementById("def-preFooter");
+	defPreFooter.outerHTML = wet.builder.preFooter({
+		dateModified: "2017-08-29"
+	});
+</script>
+</main>
+<div id="def-footer">
+<!-- Write closure fall-back static file -->
+<!-- /ROOT/etc/designs/canada/cdts/gcweb/v4_0_25/cdts/static/footer-en.html -->
+</div>
+<!-- Write closure template -->
+<script type="text/javascript">
+	var defFooter = document.getElementById("def-footer");
+	defFooter.outerHTML = wet.builder.footer({
+		showFeatures: "false"
+	});
+</script>
+<!-- Write closure template -->
+<script type="text/javascript">
+	document.write(wet.builder.refFooter({
+	}));
+</script>
+
+</body>
 </html>
