--- a/scenarioT/weather/lightning/index_e.html
+++ b/scenarioT/weather/lightning/index_e.html
@@ -142,9 +142,9 @@
 		<div class="container">
 	<div class="row">
 		<ol class="breadcrumb">
-<li><a href="https://gc-proto.github.io/weather/en.html">Home</a></li><li><a href="https://gc-proto.github.io/weather/services/environment.html">Environment and natural resources</a></li>
-<li><a href="https://gc-proto.github.io/weather/canada_e.html">Weather information</a></li>
-<li><a href="https://gc-proto.github.io/weather/mainmenu/alert_menu_e.html">Alerts</a></li>
+<li><a href="../../weather/en.html">Home</a></li><li><a href="../../weather/services/environment.html">Environment and natural resources</a></li>
+<li><a href="../../weather/canada_e.html">Weather information</a></li>
+<li><a href="../../weather/mainmenu/alert_menu_e.html">Alerts</a></li>
 		</ol>
 	</div>
 </div>
@@ -184,7 +184,7 @@
 <div class="wrapper">
 	<div id="wxo-animator" data-image-current="6" data-image-count="7" data-image-lightning-id="NAT" data-wxo-anim-0="/weather/data/lightning_images/lightning_7.png" data-wxo-label-0="#1" data-wxo-anim-1="/weather/data/lightning_images/.png" data-wxo-label-1="#2" data-wxo-anim-2="/weather/data/lightning_images/lightning_2.png" data-wxo-label-2="#3" data-wxo-anim-3="/weather/data/lightning_images/lightning_3.png" data-wxo-label-3="#4" data-wxo-anim-4="/weather/data/lightning_images/lightning_4.png" data-wxo-label-4="#5" data-wxo-anim-5="/weather/data/lightning_images/lightning_5.png" data-wxo-label-5="#6" data-wxo-anim-6="/weather/data/lightning_images/lightning_6.png" data-wxo-label-6="#7"  >
     <div id="wxo-carousel-ie8" class="wxo-ie8-show">
-        <img class="wxo-active img-responsive center-block " id="wxo-anim-img-6" alt="Animation image 7 for  - Canada " src="/weather/data/lightning_images/lightning_7.png">
+        <img class="wxo-active img-responsive center-block " id="wxo-anim-img-6" alt="Animation image 7 for  - Canada " src="../../weather/data/lightning_images/lightning_7.png">
     </div>
     <div id="wxo-carousel" class="wxo-ie8-hide">
     	<p class="wxo-loading-msg text-center mrgn-tp-lg mrgn-bttm-lg">Loading images...</p>
