--- a/scenarioT/weather/lightning/index_e.html
+++ b/scenarioT/weather/lightning/index_e.html
@@ -182,7 +182,7 @@
 <a id="mapTop"></a>
 
 <div class="wrapper">
-	<div id="wxo-animator" data-image-current="6" data-image-count="7" data-image-lightning-id="NAT" data-wxo-anim-0="/weather/data/lightning_images/lightning_7.png" data-wxo-label-0="#1" data-wxo-anim-1="/weather/data/lightning_images/.png" data-wxo-label-1="#2" data-wxo-anim-2="/weather/data/lightning_images/lightning_2.png" data-wxo-label-2="#3" data-wxo-anim-3="/weather/data/lightning_images/lightning_3.png" data-wxo-label-3="#4" data-wxo-anim-4="/weather/data/lightning_images/lightning_4.png" data-wxo-label-4="#5" data-wxo-anim-5="/weather/data/lightning_images/lightning_5.png" data-wxo-label-5="#6" data-wxo-anim-6="/weather/data/lightning_images/lightning_6.png" data-wxo-label-6="#7"  >
+	<div id="wxo-animator" data-image-current="6" data-image-count="7" data-image-lightning-id="NAT" data-wxo-anim-0="../../weather/data/lightning_images/lightning_7.png" data-wxo-label-0="#1" data-wxo-anim-1="../../weather/data/lightning_images/.png" data-wxo-label-1="#2" data-wxo-anim-2="../../weather/data/lightning_images/lightning_2.png" data-wxo-label-2="#3" data-wxo-anim-3="../../weather/data/lightning_images/lightning_3.png" data-wxo-label-3="#4" data-wxo-anim-4="../../weather/data/lightning_images/lightning_4.png" data-wxo-label-4="#5" data-wxo-anim-5="../../weather/data/lightning_images/lightning_5.png" data-wxo-label-5="#6" data-wxo-anim-6="../../weather/data/lightning_images/lightning_6.png" data-wxo-label-6="#7"  >
     <div id="wxo-carousel-ie8" class="wxo-ie8-show">
         <img class="wxo-active img-responsive center-block " id="wxo-anim-img-6" alt="Animation image 7 for  - Canada " src="../../weather/data/lightning_images/lightning_7.png">
     </div>
